# docascode

./: .env.example  .gitignore  .markdownlint.json  .vale.ini  BRANCH_PROTECTION_GUIDE.md  GITHUB_PAGES_SETUP.md  IMPLEMENTATION_SUMMARY.md  QUICK_SETUP_CHECKLIST.md  README.md  SETUP_GUIDE.md  TEST_DATA_SUMMARY.md  WEEK1_COMPLETE.md  WEEK1_PROGRESS.md  WEEK2_COMPLETE.md  _tmp_graph.html  index.html  mkdocs.yml  pyproject.toml  requirements.txt  script.js  styles.css
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: config.yml  documentation-bug.yml  documentation-improvement.yml  documentation-request.yml
.github/PULL_REQUEST_TEMPLATE/: documentation.md
.github/workflows/: docs-build.yml  docs-deploy.yml
.streamlit/: config.toml
Docs/: DEVLOG.md  GPTPlan.txt  MkDocs-Powered Development Plan_ From POC to Produ.md  ProjectOverview  docascode
app/: streamlit_app.py
core/: __init__.py  dummy_data.py  export_md.py  graph_seed.py  nlp.py  procedure.py  sources.py  visualize.py
data/: borrowers.csv  regulations.csv  systems.csv
docascode_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
examples/: README.md  compliance_graph.json  it_onboarding_graph.json  load_test_data.py  mortgage_graph.json  software_dev_graph.json  test_all_tools.py  usage_demo.py
examples/sample_documents/: api_documentation.md  developer_guide.md  gdpr_compliance.md  (+2 more)
mcp_server/: __init__.py  cli.py  config.py  server.py
scripts/: ingest.py
site_docs/: changelog.md  faq.md  getting-started.md  glossary.md  implementation-checklist.md  implementation-roadmap.md  index.md  overview.md  plan.md  quick-start-guide.md  testing.md
templates/: policy.md.j2  procedure.md.j2  release_notes.md.j2  report.md.j2  runbook.md.j2  simple_doc.md.j2
tests/: __init__.py  conftest.py  test_graph_engine.py  test_tools.py  test_transformer.py
(+41 files in other folders)
